--- a/style.css
+++ b/style.css
@@ -1,17 +1,31 @@
 body {
     background: rgb(28, 28, 135);
     color: white;
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    width: 800px;
 }
 
 .header {
+    text-align: right;
+    font-size: x-small;
+    color:sandybrown;
+}
+
+.top {
     text-align: center;
     color:azure;
     font-size: larger;
+    border: groove;
+    border-width: 1px;
+
 }
 
 .main {
     color:yellow;
+    height: 300px;
+}
+ul {
+    list-style-type: none;
 }
 
 .footer {
@@ -22,10 +36,12 @@ body {
 .special{
     text-decoration: underline;
     font-size: small;
+    color:aliceblue;
 }
 
 #navigation {
     font-size: smaller;
+    text-align: center;
 }
 
 /* Universal Selector */
@@ -38,8 +54,8 @@ body {
 /* Style for links */
 a {
     text-decoration: none;
-    color: white
+    color: violet
 }
 a:hover{
-    color:violet;
+    color:darkviolet;
 }
