--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 .header {
     text-align: right;
-    font-size: x-small;
+    font-size: small;
     color:sandybrown;
 }
 
@@ -17,7 +17,6 @@ body {
     font-size: larger;
     border: groove;
     border-width: 1px;
-
 }
 
 .main {
